# autopi

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SETUP.md  Test_Plan.md  autopi.code-workspace  deploy.sh  kill_collector.sh  pi_setup.sh  pyproject.toml  run_local.sh  run_remote.sh  ssm_collector_setup.sh  sync_ui.sh
.github/workflows/: ci.yml
raspberryPiSetup/: add_pican3_overlays.sh  add_rtc_overlays.sh  configure_ap_client_firewall.sh  configure_raspap_dual_ap.sh  configure_raspap_guest_ap.sh  configure_wan_dns.sh  disable_fake_hwclock.sh  enable_can0_at_startup.sh  install_CAN_utils.sh  install_autopi_web_service.sh  install_raspap.sh  install_rtc_tools.sh  install_socketcand.sh  install_uv.sh  print_network_map.sh  set_hostname.sh  update.sh
src/: main.py  obd_main.py  ssm_client.py  ssm_collector.py  ssm_main.py  ssm_runtime.py  web_main.py
src/autopi-app/: README.md  web_main.py
src/autopi-app/configs/: dashboard.json  detailed.json
src/autopi-app/static/: app.js  dashboard.html  detailed.html  style.css
src/obd-collector/: README.md  obd_main.py
src/ssm-collector/: README.md  generate_channels_json.py  raider_reader.py  ssm_client.py  ssm_collector.py  ssm_main.py  ssm_runtime.py
src/ssm-collector/test/: run_all.sh
src/static/: index.html
